# fastapi-simple-crud

./: pyproject.toml
src/app/: app.py  model.py  router.py
src/app/templates/: todo.html
